fix(console): operation button align in api resource detail (#416)

--- a/packages/console/src/pages/ApiResourceDetails/index.module.scss
+++ b/packages/console/src/pages/ApiResourceDetails/index.module.scss
@@ -36,7 +36,10 @@
     }
   }
 
-  .operation {
+  .operations {
+    display: flex;
+    align-items: center;
+
     > *:not(:first-child) {
       margin-left: _.unit(3);
     }
